--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link href="scripts/style.css" type="text/css" rel="stylesheet" />
 <title>TESTISIVU</title>
+</head>
 <body>
 <p>hello</p>
 </body>
