Deleted useless lines

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="scripts/style.css" /> 
+<!DOCTYPE html>> 
 <html>
 <head>
 <link href="scripts/style.css" type="text/css" rel="stylesheet" />
